# omicsoracle

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: config.yaml
notebooks/01_eda/: 01_tcga_eda.ipynb
src/omicsoracle/utils/: tcga_download.py
workflow/: Snakefile
workflow/scripts/: run_de.py  run_drug_targets.py  run_eda.py  run_hypothesis_agent.py  run_pathway.py
